<package>
  <name>ps3_ardrone</name>
  <version>1.0.0</version>
  <description>ps3_ardrone</description>
  <maintainer email="kbogert@uga.edu">Kenneth Bogert</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ps3_ardrone</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Kenneth Bogert</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>ps3joy</build_depend>
  <build_depend>ardrone_autonomy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>ps3joy</run_depend>
  <run_depend>ardrone_autonomy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>ps3joy</test_depend> -->
  <!-- <test_depend>ardrone_autonomy</test_depend> -->

</package>

